# mlx-sdk-py

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  base_models.py  handle_message.py  redis_logger.py  remote.py  service.py  settings.py  threadpool.py
src/ray_handler/: redis_actor.py  service_actor.py
testing/: Cargo.toml  example.py  userland_service.py
testing/src/: main.rs  utils.rs
